<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_big"
    android:paddingTop="@dimen/spacing_normal"
    android:paddingEnd="@dimen/spacing_big"
    android:paddingBottom="@dimen/spacing_normal">

    <EditText
        android:id="@+id/editTextWebDavUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_url"
        android:inputType="textUri"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editTextWebDavUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_user"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editTextWebDavPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_password"
        android:inputType="textPassword"
        android:maxLines="1" />

</LinearLayout>
