<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerCurrencyAndAmount"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?colorPrimary"
            android:theme="@style/ThemeOverlay.Expenses.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/editTextAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextAmount"
                tools:text="USD" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/spacing_large"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:theme="@style/ThemeOverlay.Expenses.EditText.Dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textSymbol"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageTitle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/editTextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextTitle"
            app:srcCompat="@drawable/ic_title_24dp"
            app:tint="@color/color_on_surface_emphasis_medium" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageTitle"
            app:layout_constraintTop_toBottomOf="@id/containerCurrencyAndAmount" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageTags"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/containerTags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/containerTags"
            app:srcCompat="@drawable/ic_local_24dp"
            app:tint="@color/color_on_surface_emphasis_medium" />

        <FrameLayout
            android:id="@+id/containerTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageTags"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

            <TextView
                android:id="@+id/text_select_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_large"
                android:text="@string/select_tags"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/color_on_surface_emphasis_medium" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:paddingStart="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_small"
                app:chipSpacing="@dimen/spacing_normal" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageDate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textDate"
            app:srcCompat="@drawable/ic_date_range_24dp"
            app:tint="@color/color_on_surface_emphasis_medium" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="?selectableItemBackground"
            android:paddingStart="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_large"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="@color/color_on_surface_emphasis_medium"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down_24dp"
            app:drawableTint="@color/color_on_surface_emphasis_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageDate"
            app:layout_constraintTop_toBottomOf="@id/containerTags"
            tools:text="Sun, 27 May 19:30" />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_big"
            android:gravity="top"
            android:hint="@string/notes_hint"
            android:inputType="textCapSentences|textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDate" />

        <!-- Attachments -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textAttachmentsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_big"
            android:text="@string/attachments"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@color/color_on_surface_emphasis_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNotes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddAttachment"
            style="@style/Widget.Expenses.TextButton.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_attachment"
            app:layout_constraintStart_toStartOf="@id/textAttachmentsLabel"
            app:layout_constraintTop_toBottomOf="@id/textAttachmentsLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textNoAttachments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginEnd="@dimen/spacing_big"
            android:text="@string/no_attachments"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/color_on_surface_emphasis_medium"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddAttachment" />

        <LinearLayout
            android:id="@+id/containerAttachments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_big"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddAttachment" />

        <!-- Background of this expense -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textExpenseBackgroundLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_big"
            android:text="@string/expense_background"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@color/color_on_surface_emphasis_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerAttachments" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageExpenseBackground"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_big"
            android:background="@color/color_on_surface_emphasis_divider"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textExpenseBackgroundLabel" />

        <LinearLayout
            android:id="@+id/containerExpenseBackgroundButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginEnd="@dimen/spacing_big"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageExpenseBackground">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonChooseExpenseBackground"
                style="@style/Widget.Expenses.Button.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonClearExpenseBackground"
                style="@style/Widget.Expenses.TextButton.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_weight="1"
                android:text="@string/clear_background" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textExpenseBackgroundHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_big"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/expense_background_hint"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/color_on_surface_emphasis_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerExpenseBackgroundButtons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>